intro memcached, bench failed :(

--- a/webapp/docker-compose.yml
+++ b/webapp/docker-compose.yml
@@ -58,5 +58,10 @@ services:
     volumes:
        - /sessions
 
+  memcached:
+      image: memcached:latest
+      ports:
+          - "11211:11211"
+
 volumes:
   mysql:
