--- a/webapp/mysql/conf.d/my.cnf
+++ b/webapp/mysql/conf.d/my.cnf
@@ -1,3 +1,5 @@
 [mysqld]
 default_authentication_plugin=mysql_native_password
 performance_schema=off
+max_connections=1000
+mysqlx_max_connections=1000
